--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -11,7 +11,7 @@
 }
 
 .section-features {
-  padding: 20rem 0;
+  padding: 20rem 10rem;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primay-light, 0.8),
